--- a/src/components/IndexContet/IndexContent.scss
+++ b/src/components/IndexContet/IndexContent.scss
@@ -67,6 +67,7 @@
 
                 .button-filter:hover {
                     background-color: #FF6F61;
+                    border: 1px solid #FF6F61;
                 }
 
                 .button-filter {
@@ -139,6 +140,7 @@
 
         .child-button:hover {
             background-color: #FF6F61;
+            border: 1px solid #FF6F61;
         }
 
         .child-button {
@@ -177,6 +179,7 @@
 
             .button-filter:hover {
                 background-color: #FF6F61;
+                border: 1px solid #FF6F61;
             }
 
             .button-filter {
