--- a/src/components/ContentTop/ContentTop.scss
+++ b/src/components/ContentTop/ContentTop.scss
@@ -1,4 +1,5 @@
 .content-top {
+    position: relative;
     width: 1320px;
     padding-left: 300px;
     padding-right: 300px;
@@ -46,6 +47,19 @@
             float: right;
             width: 40%;
         }
+    }
+
+    .imgLeft {
+        position: absolute;
+        left: 2.16px;
+        top: 614.62px;
+    }
+
+    .imgRight {
+        position: absolute;
+        left: 84.52%;
+        right: -6.39%;
+        top: 45.06%;
     }
 
     // Responsive styles for mobile
