--- a/src/components/Navbar/NavbarStyle.scss
+++ b/src/components/Navbar/NavbarStyle.scss
@@ -12,7 +12,8 @@
         border-bottom: 1px solid #E3E3E3;
 
         .center>h2 {
-            font-family: cursive;
+            // font-family: cursive;
+            font-family: 'Times New Roman', Times, serif
         }
 
         .left:hover {
