--- a/src/components/Products/Product.scss
+++ b/src/components/Products/Product.scss
@@ -2,10 +2,6 @@
     position: relative;
     overflow: hidden;
 
-    // &:hover img {
-    //     transform: scale(1.1);
-    // }
-
     .img-product {
         position: relative;
         display: block;
@@ -96,7 +92,7 @@
 
         .hot-tag {
             position: absolute;
-            top: 65px;
+            top: 22px;
             left: 0;
             background-color: #ff6f61;
             color: white;
@@ -107,6 +103,37 @@
             display: flex;
             align-items: center;
             justify-content: center;
+        }
+
+        .sale-price {
+            font-weight: 600;
+            font-size: 16px;
+            color: #FF6F61;
+            margin-left: 12px;
+        }
+
+        .original-price {
+            text-decoration: line-through;
+            text-align: center;
+            font-weight: 600;
+            font-size: 14px;
+            color: rgba(0, 0, 0, 0.5);
+        }
+
+    }
+
+    &:hover {
+        .original-price {
+            display: block;
+            text-decoration: none;
+            font-weight: 600;
+            font-size: 16px;
+            color: #000000;
+        }
+
+        .sale-price {
+            display: none;
+
         }
     }
 }
